Got more boilerplate

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Gulp App for Boilerplate</title>
+	<script type="text/javascript" src="dist/distribution-app.js"></script>
 </head>
 <body>
 	<h1>Gulp is Awesome</h1>
